<resources>
    <string name="app_name">GiftElves</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_search_hint">礼包精灵</string>
    <string name="main_search_btn">搜索</string>
    <string name="main_login">请登录</string>
    <string name="main_btn_home">主页</string>
    <string name="main_btn_gift">我的礼物</string>
    <string name="main_btn_send">提个意见</string>
    <string name="main_btn_about">关于我们</string>
    <string name="hint_head_text_1">下拉刷新</string>
    <string name="hint_head_text_2">上次更新时间:</string>
</resources>
